# prefworld

./: LICENSE  MODIFICATION_NOTES.md  README.md  push.bat  pyproject.toml  requirements.txt
prefworld/: __init__.py
prefworld/configs/: __init__.py
prefworld/configs/dataset/: nuplan_db.yaml
prefworld/configs/eval/: default.yaml
prefworld/configs/train/: default.yaml  stage1_pc.yaml  stage2_eb.yaml  stage2_ebstm.yaml  stage3_joint.yaml
prefworld/data/: cache.py  dataset.py  extractor.py  labels.py  nuplan_db.py
prefworld/models/: eb_stm.py  efen.py  efen_edit.py  gaussian.py  intention_net.py  motion_primitives.py  preference_completion.py  prefworld_model.py  template_encoder.py
prefworld/nuplan_integration/: __init__.py  prefworld_planner.py
prefworld/planning/: critical_agents.py  mpc.py  pci.py  planner.py  risk.py
prefworld/scripts/: compute_edit_distance_stats.py  create_splits.py  prepare_dataset.py  sanity_check_feasible_actions.py  smoke_test_pc_synthetic.py  train.py  train_joint.py  train_stage1_pc.py  train_stage2_ebstm.py  train_stage3_joint.py  validate.py
prefworld/training/: trainer.py  utils.py
prefworld/utils/: calibration.py  config.py  geometry.py
